# cmake

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
cmake/: linux-x86-64.cmake  macosx.cmake  windows-x86-64.cmake
